ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: k8sonazure
  namespace: default
spec:
  rules:
    - host: relaxing-meerkat-aks.westeurope.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: angular-app-service
              servicePort: 80
            path: /?(.*)
          - backend:
              serviceName: api-service
              servicePort: 80
            path: /api/?(.*)
  tls:
  - secretName: tls-secret
    hosts:
      - relaxing-meerkat-aks.westeurope.cloudapp.azure.com
